[package]
name = "yap2p"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Experimental yet another peer-to-peer library"
repository = "https://github.com/Scurrra/ya"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "futures", "tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aes = "0.8.2"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive", "alloc"] }
sha2 = "0.10.6"
tokio = "1.27.0"

# Optional
reqwest = { version = "0.11.16", features = ["blocking"], optional = true}
ureq = { version = "2.6.2", optional = true}
isahc = { version="1.7.2", features=["http2"], optional=true }
bitflags = { version="2.2.1", features=["serde"] }
generic-array = "0.14.7"
bincode = "1.3.3"
futures = "0.3.28"

[features]
default = ["reqwest", "regular_history"]

# http clients
reqwest = ["dep:reqwest"]   # tokio & futures & hyper
ureq = ["dep:ureq"]         # ...
isahc = ["dep:isahc"]       # futures

# history
regular_history = []
sync_safe_history = []